# Jarvis

./: .env.example  .gitignore  .gitleaks.toml  .mcp.json  AGENTS.md  README.md  docker-compose.yml  package.json
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-09-tavus-removal-jarvis-face.md  2026-06-11-conversation-optimization.md  2026-06-11-eye-tracker.md  2026-06-11-fireworks-provider.md  2026-06-11-langgraph-domain-nodes.md  2026-06-11-langgraph-foundation.md  (+3 more)
docs/tavus/: llms.txt  openapi.yaml  skill.md
frontend/: index.html  package-lock.json  package.json  server.mjs  vite.config.ts  vitest.config.ts
frontend/src/: AgentConsole.css  AgentConsole.tsx  App.css  App.tsx  agentEvents.ts  api.ts  bargeIn.test.ts  bargeIn.ts  chatSession.test.ts  chatSession.ts  index.css  speechChunker.test.ts  speechChunker.ts  voiceOutput.test.ts  voiceOutput.ts  wakeWord.test.ts  wakeWord.ts
frontend/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
frontend/src-tauri/resources/: README.md
frontend/src-tauri/sidecar/: Info.plist  jarvus-eye-tracker.swift  jarvus-stt.swift
frontend/src-tauri/src/: lib.rs  session.rs  stt.rs  tavus.rs  wake_word.rs
lib/: tavus.mjs
proxy/: .dockerignore  Dockerfile  package-lock.json  package.json
proxy/evals/: pacing.mjs
proxy/src/: agent.js  agent.test.js  conversation.js  conversation.test.js  events.js  memory.js  memory.test.js  preamble.js  preamble.test.js  server.js  translate.js  translate.test.js
scripts/: build-sidecar.sh  setup-tavus.mjs  tunnel.mjs
tts/: server.py  setup.sh  start.sh  synth.py
(+36 files in other folders)
